[package]
name = "rvi"
version = "0.1.5"
edition = "2021"
authors = ["bujnlc8 <75124771@qq.com>"]
description = "A small tool to let you write rust with rust-analyzer not using cargo"
license = "MIT"
keywords = ["cli", "youcompleteme", "none-cargo"]
repository = "https://github.com/bujnlc8/rvi"
categories = ["command-line-utilities"]

[dependencies]
toml = "0.8.19"
serde = {version = "1.0.210", features = ["derive"], default-features = false}
anyhow = "1.0.89"
dirs = "5.0.1"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
